[Bling Password Manager] Unifying treating of password form action

Normalizing of password form action is done in 2 different cases with different code:
 1.On Load, in Obj-C code in password_controller.mm
 2.On fill in JS in password_controller.js

That's bad, as any duplicating code, because in some cases it generates different canonical actions (for example when the action is empty). This CL unifying canonical action calculation. As a model for canonical action calculation GetCanonicalActionForForm from Desktop/Android implementation is taken.

Bug: 710438, 708602
Change-Id: I1ea879c60d01cf02bed6ea9715089221971ff4a0
Reviewed-on: https://chromium-review.googlesource.com/596031
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#491434}
Former-commit-id: cdd46b0be27f87114037e15970f97209fea79bca