ios/chrome/browser/passwords/password_controller.mm
@@ -686,12 +686,8 @@ bool GetPageURLAndCheckTrustLevel(web::WebState* web_state, GURL* page_url) {
   form->signon_realm = form->origin.ReplaceComponents(remove_path).spec();
 
   std::string action;
-  // Not checking the return value, as empty action is valid.
   dictionary->GetString("action", &action);
-  GURL actionUrl = action.empty() ? originUrl : originUrl.Resolve(action);
-  if (!actionUrl.is_valid())
-    return NO;
-  form->action = stripURL(actionUrl);
+  form->action = GURL(action);
 
   if (!dictionary->GetString("usernameElement", &form->username_element) ||
       !dictionary->GetString("usernameValue", &form->username_value) ||
